--- a/app/src/main/res/layout/activity_chapter_content.xml
+++ b/app/src/main/res/layout/activity_chapter_content.xml
@@ -62,7 +62,7 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Chapter One"
+                android:text="GENERAL PROVISIONS"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold"
